# permasigner

./: .dockerignore  .gitignore  .gitmodules  .pep8  Dockerfile  Dockerfile.development  MANIFEST.in  Makefile  README.md  app.entitlements  control  dev_certificate.p12  entitlements.plist  ios_requirements.txt  main.py  pyproject.toml  requirements.txt  setup.py  tcprelay.py
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build.yml  codeql-analysis.yml  docker.yml  first_issue.yml  lint.yml  publish.yml  pypi.yml  run.yml  test.yml
data/: control  docker-entrypoint.sh  entitlements.plist
docker/: entrypoint.sh
docs/: README.md  SUMMARY.md
docs/contribution/: committing-and-making-a-pull-request.md  develop-on-macos-linux.md  develop-on-windows.md  getting-started.md  important-files.md  visual-studio-code-setup.md
docs/information/: known-working-apps.md  optional-flags.md
docs/usage/: run-in-docker.md  run-on-ios.md  run-on-linux.md  run-on-macos.md  run-on-windows.md  run-online.md
permasigner/: .ps_utils.py.swp  __init__.py  __main__.py  __version__.py  copier.py  copy.py  downloader.py  dpkg.py  hash.py  installer.py  logger.py  main.py  packager.py  permasigner.py  ps_builder.py  ps_copier.py  ps_downloader.py  ps_hash.py  ps_installer.py  ps_logger.py  ps_tcprelay.py  ps_usbmux.py  ps_utils.py  sign.py  tcprelay.py  utils.py
permasigner/.jukit/: .jukit_info.json
permasigner/bundled/constrictor/: dpkg.py
permasigner/bundled/unix_ar/: LICENSE.txt  unix_ar.py
permasigner/constrictor/: LICENCE  ar.py  configreader.py  configuration.py  control.py  dpkg.py  helpers.py  test.py
permasigner/data/: docker-entrypoint.sh  entitlements.plist  test.py
permasigner/data/DEBIAN/: control  postinst  postrm  prerm
permasigner/utils/: copy.py  hash.py  usbmux.py
utils/: copy.py  downloader.py  hash.py  installer.py  tcprelay.py  usbmux.py
