[tool.poetry]
name = "permasigner"
version = "1.0.0"
description = "Permanently signs IPAs on jailbroken iDevices (persists on stock)."
authors = ["Nebula"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.7"
certifi = "2022.6.15"
charset-normalizer = "2.1.0"
idna = "3.3"
urllib3 = "1.26.10"
requests = "2.28.1"
toml = "0.10.2"
pycodestyle = "2.8.0"
bcrypt = { version = "3.2.2", optional = true }
cffi = { version = "1.14.6", optional = true }
cryptography = { version = "37.0.4", optional = true }
paramiko = { version = "2.11.0", optional = true }
pycparser = { version = "2.21", optional = true }
PyNaCl = { version = "1.5.0", optional = true }
six = { version = "1.16.0", optional = true }
scp = { version = "0.14.4", optional = true }

[tool.poetry.extras]
scp = ["bcrypt", "cffi", "cryptography", "paramiko", "pycparser", "PyNaCl", "six", "scp"]
	
[tool.poetry.dev-dependencies]
autopep8 = "1.6.0"

[tool.autopep8]
max_line_length = 130
ignore = ["E701", "E70", "E722", "E402", "E302", "E266", "E265", "E26"]
in-place = true
recursive = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
