[tool.poetry]
name = "permasigner"
version = "1.1.3"
description = "Permanently signs IPAs on jailbroken iDevices (persists on stock)."
authors = ["Nebula <me@itsnebula.net>"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/permasigner/permasigner"
documentation = "https://permasigner.itsnebula.net/"
keywords = ["python", "windows", "macos", "linux", "docker", "cli", "open-source", "ios", "command-line-app", "cli-app", "hacktoberfest", "procursus", "permasign", "permasigner"]
classifiers = [
    "Natural Language :: English",
    "Environment :: Console",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.7"
importlib-metadata = { version = ">=1,<6", python = "<3.8" }
requests = "2.28.1"
toml = "0.10.2"
urllib3 = "1.26.12"
pycodestyle = "2.9.1"
idna = "3.4"
charset-normalizer = "2.1.1"
certifi = "2022.9.24"

scp = { version = "0.14.4", markers = "sys_platform == 'linux' or sys_platform == 'win32' or 'freebsd' in sys_platform or (sys_platform == 'darwin' and platform_machine == 'x86_64') or (sys_platform == 'darwin' and platform_machine == 'arm64')" }
six = { version = "1.16.0", markers = "sys_platform == 'linux' or sys_platform == 'win32' or 'freebsd' in sys_platform or (sys_platform == 'darwin' and platform_machine == 'x86_64') or (sys_platform == 'darwin' and platform_machine == 'arm64')" }
bcrypt = { version = "4.0.1", markers = "sys_platform == 'linux' or sys_platform == 'win32' or 'freebsd' in sys_platform or (sys_platform == 'darwin' and platform_machine == 'x86_64') or (sys_platform == 'darwin' and platform_machine == 'arm64')" }
cffi = { version = "1.15.1", markers = "sys_platform == 'linux' or sys_platform == 'win32' or 'freebsd' in sys_platform or (sys_platform == 'darwin' and platform_machine == 'x86_64') or (sys_platform == 'darwin' and platform_machine == 'arm64')" }
cryptography = { version = "38.0.3", markers = "sys_platform == 'linux' or sys_platform == 'win32' or 'freebsd' in sys_platform or (sys_platform == 'darwin' and platform_machine == 'x86_64') or (sys_platform == 'darwin' and platform_machine == 'arm64')" }
paramiko = { version = "2.11.0", markers = "sys_platform == 'linux' or sys_platform == 'win32' or 'freebsd' in sys_platform or (sys_platform == 'darwin' and platform_machine == 'x86_64') or (sys_platform == 'darwin' and platform_machine == 'arm64')" }
pycparser = { version = "2.21", markers = "sys_platform == 'linux' or sys_platform == 'win32' or 'freebsd' in sys_platform or (sys_platform == 'darwin' and platform_machine == 'x86_64') or (sys_platform == 'darwin' and platform_machine == 'arm64')" }
pynacl = { version = "1.5.0", markers = "sys_platform == 'linux' or sys_platform == 'win32' or 'freebsd' in sys_platform or (sys_platform == 'darwin' and platform_machine == 'x86_64') or (sys_platform == 'darwin' and platform_machine == 'arm64')" }

[tool.poetry.dev-dependencies]
autopep8 = "2.0.0"

[tool.poetry.scripts]
permasigner = 'permasigner.__main__:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
